bug 258055. Fix broken C++ compiler bustage. r+sr=roc, patch by Yuliy Pisetsky